--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "cstdlib": "c",
-        "intrinsic.h": "c"
+        "intrinsic.h": "c",
+        "*.inc": "c"
     }
 }
